# traveltips

./: .gitignore  LICENSE  PRIVACY.rst  README.rst  pyproject.toml  setup.py
.github/workflows/: bundle_app.yml  make_bundle.yml
src/traveltips/: __init__.py  __main__.py  app.py
traveltips/: app.py
