[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Travel Tips"
bundle = "com.keith-magee"
version = "1.3.0"
license.file = "LICENSE"
author = "Russell Keith-Magee"
author_email = "russell@keith-magee.com"
requires = []

[tool.briefcase.app.traveltips]
formal_name = "Travel Tips"
description = "Calculate tips in local currency while you're travelling"
requires = [
    # "../../toga/core",
]
sources = ["src/traveltips"]

[tool.briefcase.app.traveltips.macOS]
requires = [
    # "../../toga/cocoa",
    "toga-cocoa~=0.4.5",
    "std-nslog~=1.0.0",
]
icon = "icons/macOS/traveltips"

[tool.briefcase.app.traveltips.windows]
requires = [
    # "../../toga/winforms"
    "toga-winforms~=0.4.5",
]
icon = "icons/windows/traveltips"

[tool.briefcase.app.traveltips.linux]
requires = [
    # "../../toga/gtk"
    "toga-gtk~=0.4.5",
]
icon = "icons/linux/traveltips"

[tool.briefcase.app.traveltips.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK
    "libgtk-3-0",
    # Needed to provide GI bindings to GTK
    "libgirepository-1.0-1",
    "gir1.2-gtk-3.0",
]

[tool.briefcase.app.traveltips.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
]

[tool.briefcase.app.traveltips.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
]

[tool.briefcase.app.traveltips.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
]
linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.traveltips.linux.flatpak]

flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "44"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.traveltips.iOS]
requires = [
    # "../../toga/iOS",
    "toga-iOS~=0.4.5",
    "std-nslog~=1.0.0",
]
icon = "icons/iOS/traveltips"

# support_package = "../../support/Python-Apple-support/dist/Python-3.11-iOS-support.custom.tar.gz"
# template = "../../templates/briefcase-iOS-Xcode-template"

cleanup_paths = [
    "Support/python-stdlib/lib-dynload/_bisect.*.dylib",
    "Support/python-stdlib/lib-dynload/_blake2.*.dylib",
    "Support/python-stdlib/lib-dynload/_bz2.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_cn.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_hk.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_iso2022.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_jp.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_kr.*.dylib",
    "Support/python-stdlib/lib-dynload/_codecs_tw.*.dylib",
    # "Support/python-stdlib/lib-dynload/_contextvars.*.dylib",
    "Support/python-stdlib/lib-dynload/_crypt.*.dylib",
    # "Support/python-stdlib/lib-dynload/_csv.*.dylib",
    # "Support/python-stdlib/lib-dynload/_ctypes.*.dylib",
    "Support/python-stdlib/lib-dynload/_ctypes_test.*.dylib",
    # "Support/python-stdlib/lib-dynload/_datetime.*.dylib",
    "Support/python-stdlib/lib-dynload/_dbm.*.dylib",
    # "Support/python-stdlib/lib-dynload/_decimal.*.dylib",
    "Support/python-stdlib/lib-dynload/_elementtree.*.dylib",
    "Support/python-stdlib/lib-dynload/_hashlib.*.dylib",
    "Support/python-stdlib/lib-dynload/_heapq.*.dylib",
    "Support/python-stdlib/lib-dynload/_json.*.dylib",
    "Support/python-stdlib/lib-dynload/_lsprof.*.dylib",
    "Support/python-stdlib/lib-dynload/_lzma.*.dylib",
    "Support/python-stdlib/lib-dynload/_md5.*.dylib",
    "Support/python-stdlib/lib-dynload/_multibytecodec.*.dylib",
    "Support/python-stdlib/lib-dynload/_opcode.*.dylib",
    "Support/python-stdlib/lib-dynload/_pickle.*.dylib",
    "Support/python-stdlib/lib-dynload/_queue.*.dylib",
    # "Support/python-stdlib/lib-dynload/_random.*.dylib",
    "Support/python-stdlib/lib-dynload/_sha1.*.dylib",
    "Support/python-stdlib/lib-dynload/_sha256.*.dylib",
    "Support/python-stdlib/lib-dynload/_sha3.*.dylib",
    # "Support/python-stdlib/lib-dynload/_sha512.*.dylib",
    # "Support/python-stdlib/lib-dynload/_socket.*.dylib",
    "Support/python-stdlib/lib-dynload/_sqlite3.*.dylib",
    "Support/python-stdlib/lib-dynload/_ssl.*.dylib",
    "Support/python-stdlib/lib-dynload/_statistics.*.dylib",
    # "Support/python-stdlib/lib-dynload/_struct.*.dylib",
    "Support/python-stdlib/lib-dynload/_testbuffer.*.dylib",
    "Support/python-stdlib/lib-dynload/_testcapi.*.dylib",
    "Support/python-stdlib/lib-dynload/_testclinic.*.dylib",
    "Support/python-stdlib/lib-dynload/_testimportmultiple.*.dylib",
    "Support/python-stdlib/lib-dynload/_testinternalcapi.*.dylib",
    "Support/python-stdlib/lib-dynload/_testmultiphase.*.dylib",
    "Support/python-stdlib/lib-dynload/_typing.*.dylib",
    "Support/python-stdlib/lib-dynload/_uuid.*.dylib",
    "Support/python-stdlib/lib-dynload/_xxtestfuzz.*.dylib",
    "Support/python-stdlib/lib-dynload/_zoneinfo.*.dylib",
    # "Support/python-stdlib/lib-dynload/array.*.dylib",
    "Support/python-stdlib/lib-dynload/audioop.*.dylib",
    # "Support/python-stdlib/lib-dynload/binascii.*.dylib",
    # "Support/python-stdlib/lib-dynload/cmath.*.dylib",
    # "Support/python-stdlib/lib-dynload/fcntl.*.dylib",
    # "Support/python-stdlib/lib-dynload/math.*.dylib",
    "Support/python-stdlib/lib-dynload/mmap.*.dylib",
    "Support/python-stdlib/lib-dynload/pyexpat.*.dylib",
    "Support/python-stdlib/lib-dynload/resource.*.dylib",
    # "Support/python-stdlib/lib-dynload/select.*.dylib",
    "Support/python-stdlib/lib-dynload/termios.*.dylib",
    "Support/python-stdlib/lib-dynload/unicodedata.*.dylib",
    "Support/python-stdlib/lib-dynload/xxlimited.*.dylib",
    "Support/python-stdlib/lib-dynload/xxlimited_35.*.dylib",
    "Support/python-stdlib/lib-dynload/zlib.*.dylib",
]

[tool.briefcase.app.traveltips.android]
requires = [
    # "../../toga/android"
    "toga-android~=0.4.5",
]
build_gradle_dependencies = [
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.11.0",
]

icon = "icons/android/traveltips"

[tool.briefcase.app.traveltips.web]

requires = [
    "toga-web~=0.4.5",
]
style_framework = "Shoelace v2.3"
icon = "icons/web/traveltips"
