[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Travel Tips"
bundle = "com.keith-magee"
version = "1.4.1"
license.file = "LICENSE"
author = "Russell Keith-Magee"
author_email = "russell@keith-magee.com"
requires = []

[tool.briefcase.app.traveltips]
formal_name = "Travel Tips"
description = "Calculate tips in local currency while you're travelling"
requires = [
    # "../../toga/core",
]
sources = ["src/traveltips"]

[tool.briefcase.app.traveltips.macOS]
requires = [
    # "../../toga/cocoa",
    "toga-cocoa~=0.5.0",
    "std-nslog~=1.0.0",
]
icon = "icons/macOS/traveltips"

[tool.briefcase.app.traveltips.windows]
requires = [
    # "../../toga/winforms"
    "toga-winforms~=0.5.0",
]
icon = "icons/windows/traveltips"

[tool.briefcase.app.traveltips.linux]
requires = [
    # "../../toga/gtk"
    "toga-gtk~=0.5.0",
]
icon = "icons/linux/traveltips"

[tool.briefcase.app.traveltips.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK
    "libgtk-3-0",
    # Needed to provide GI bindings to GTK
    "libgirepository-1.0-1",
    "gir1.2-gtk-3.0",
]

[tool.briefcase.app.traveltips.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
]

[tool.briefcase.app.traveltips.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
]

[tool.briefcase.app.traveltips.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
]
linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]

[tool.briefcase.app.traveltips.linux.flatpak]

flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "44"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.traveltips.iOS]
requires = [
    # "../../toga/iOS",
    "toga-iOS~=0.5.0",
    "std-nslog~=1.0.0",
]
icon = "icons/iOS/traveltips"

# support_package = "../../support/Python-Apple-support/dist/Python-3.13-iOS-support.custom.tar.gz"
# template = "../../templates/briefcase-iOS-Xcode-template"

cleanup_paths = [
    # "Support/**/lib-dynload/_asyncio.*.so*",
    "Support/**/lib-dynload/_bisect.*.so*",
    # "Support/**/lib-dynload/_blake2.*.so*",
    "Support/**/lib-dynload/_bz2.*.so*",
    "Support/**/lib-dynload/_codecs_cn.*.so*",
    "Support/**/lib-dynload/_codecs_hk.*.so*",
    "Support/**/lib-dynload/_codecs_iso2022.*.so*",
    "Support/**/lib-dynload/_codecs_jp.*.so*",
    "Support/**/lib-dynload/_codecs_kr.*.so*",
    "Support/**/lib-dynload/_codecs_tw.*.so*",
    # "Support/**/lib-dynload/_contextvars.*.so*",
    "Support/**/lib-dynload/_crypt.*.so*",
    # "Support/**/lib-dynload/_csv.*.so*",
    # "Support/**/lib-dynload/_ctypes.*.so*",
    "Support/**/lib-dynload/_ctypes_test.*.so*",
    # "Support/**/lib-dynload/_datetime.*.so*",
    "Support/**/lib-dynload/_dbm.*.so*",
    # "Support/**/lib-dynload/_decimal.*.so*",
    "Support/**/lib-dynload/_interpchannels.*.so*",
    "Support/**/lib-dynload/_interpqueues.*.so*",
    "Support/**/lib-dynload/_interpreters.*.so*",
    "Support/**/lib-dynload/_elementtree.*.so*",
    # "Support/**/lib-dynload/_hashlib.*.so*",
    "Support/**/lib-dynload/_heapq.*.so*",
    "Support/**/lib-dynload/_json.*.so*",
    "Support/**/lib-dynload/_lsprof.*.so*",
    "Support/**/lib-dynload/_lzma.*.so*",
    # "Support/**/lib-dynload/_md5.*.so*",
    "Support/**/lib-dynload/_multibytecodec.*.so*",
    # "Support/**/lib-dynload/_opcode.*.so*",
    "Support/**/lib-dynload/_pickle.*.so*",
    "Support/**/lib-dynload/_queue.*.so*",
    # "Support/**/lib-dynload/_random.*.so*",
    # "Support/**/lib-dynload/_sha1.*.so*",
    # "Support/**/lib-dynload/_sha2.*.so*",
    # "Support/**/lib-dynload/_sha3.*.so*",
    # "Support/**/lib-dynload/_sha512.*.so*",
    # "Support/**/lib-dynload/_socket.*.so*",
    "Support/**/lib-dynload/_sqlite3.*.so*",
    # "Support/**/lib-dynload/_ssl.*.so*",
    "Support/**/lib-dynload/_statistics.*.so*",
    # "Support/**/lib-dynload/_struct.*.so*",
    "Support/**/lib-dynload/_test*.*.so*",
    "Support/**/lib-dynload/_typing.*.so*",
    "Support/**/lib-dynload/_uuid.*.so*",
    "Support/**/lib-dynload/_xxtestfuzz.*.so*",
    "Support/**/lib-dynload/_zoneinfo.*.so*",
    # "Support/**/lib-dynload/array.*.so*",
    "Support/**/lib-dynload/audioop.*.so*",
    # "Support/**/lib-dynload/binascii.*.so*",
    # "Support/**/lib-dynload/cmath.*.so*",
    # "Support/**/lib-dynload/fcntl.*.so*",
    # "Support/**/lib-dynload/math.*.so*",
    "Support/**/lib-dynload/mmap.*.so*",
    "Support/**/lib-dynload/pyexpat.*.so*",
    "Support/**/lib-dynload/resource.*.so*",
    # "Support/**/lib-dynload/select.*.so*",
    "Support/**/lib-dynload/termios.*.so*",
    "Support/**/lib-dynload/unicodedata.*.so*",
    "Support/**/lib-dynload/xx*.*.so*",
    "Support/**/lib-dynload/zlib.*.so*",
    "Support/**/lib/**/test",
    "Support/**/lib/**/tkinter",
    "Support/**/lib/**/turtledemo",
]

[tool.briefcase.app.traveltips.android]
requires = [
    # "../../toga/android"
    "toga-android~=0.5.0",
]
build_gradle_dependencies = [
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.11.0",
]

icon = "icons/android/traveltips"

[tool.briefcase.app.traveltips.web]

requires = [
    "toga-web~=0.5.0",
]
style_framework = "Shoelace v2.3"
icon = "icons/web/traveltips"
